# clean-arch

./: pyproject.toml  test.db
clean_arch/: app.py
clean_arch/application/repositories/interfaces/: post.py  user.py
clean_arch/application/use_cases/: post.py  user.py
clean_arch/domain/entities/: post.py  user.py
clean_arch/domain/exceptions/: post.py  user.py
clean_arch/infrastructure/: database.py
clean_arch/infrastructure/models/: post.py  user.py
clean_arch/infrastructure/repositories/: post.py  user.py
clean_arch/presentation/routers/: post.py  user.py
clean_arch/presentation/schemas/: post.py  user.py
